--- a/MyMV/app/src/main/res/layout/activity_main.xml
+++ b/MyMV/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.elsyscoursework.mymv.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <Button
+        android:layout_width="@dimen/add_vehicle_button_dimensions"
+        android:layout_height="@dimen/add_vehicle_button_dimensions"
+        android:gravity="center_vertical|center_horizontal"
+        android:id="@+id/add_vehicle_button"
+        android:background="@drawable/round_button"
+        android:text="@string/add_new"/>
+
 </RelativeLayout>
