--- a/MyMV/app/src/main/res/values/dimens.xml
+++ b/MyMV/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="add_vehicle_button_dimensions">50dp</dimen>
     <dimen name="update_user_input_text_size">13sp</dimen>
+    <dimen name="update_views_height_dimensions">35dp</dimen>
 </resources>
