separate activity for bluetooth data transfer

--- a/MyMV/app/src/main/res/layout/activity_main.xml
+++ b/MyMV/app/src/main/res/layout/activity_main.xml
@@ -26,27 +26,9 @@
 
     <Button
         android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/test"
-        android:layout_below="@+id/add_vehicle_button"
-        android:text="test"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/testView"/>
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/test"
-        android:id="@+id/testView2"/>
-
-    <Button
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/test2"
-        android:layout_below="@+id/testView2"
-        android:text="send"/>
+        android:layout_height="50dp"
+        android:id="@+id/import_export_button"
+        android:text="Transfer"
+        android:layout_below="@id/add_vehicle_button"/>
 
 </RelativeLayout>
