--- a/MyMV/app/src/main/res/layout/activity_manage_vehicle.xml
+++ b/MyMV/app/src/main/res/layout/activity_manage_vehicle.xml
@@ -14,134 +14,160 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/manage_vehicle_type_text"
-        android:id="@+id/manage_vehicle_type"/>
+        android:id="@+id/manage_vehicle_type"
+        android:textSize="@dimen/manage_vehicle_text_size"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/manage_vehicle_type_textview"
-        android:layout_toRightOf="@+id/manage_vehicle_type"/>
+        android:layout_toRightOf="@+id/manage_vehicle_type"
+        android:textSize="@dimen/manage_vehicle_text_size"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/manage_vehicle_manufacturer_text"
         android:id="@+id/manage_vehicle_manufacturer"
-        android:layout_below="@+id/manage_vehicle_type"/>
+        android:layout_below="@+id/manage_vehicle_type"
+        android:textSize="@dimen/manage_vehicle_text_size"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/manage_vehicle_manufacturer_textview"
         android:layout_below="@+id/manage_vehicle_type"
-        android:layout_toRightOf="@+id/manage_vehicle_manufacturer"/>
+        android:layout_toRightOf="@+id/manage_vehicle_manufacturer"
+        android:textSize="@dimen/manage_vehicle_text_size"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/manage_vehicle_model_text"
         android:id="@+id/manage_vehicle_model"
-        android:layout_below="@+id/manage_vehicle_manufacturer"/>
+        android:layout_below="@+id/manage_vehicle_manufacturer"
+        android:textSize="@dimen/manage_vehicle_text_size"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/manage_vehicle_model_textview"
         android:layout_below="@+id/manage_vehicle_manufacturer"
-        android:layout_toRightOf="@+id/manage_vehicle_model" />
+        android:layout_toRightOf="@+id/manage_vehicle_model"
+        android:textSize="@dimen/manage_vehicle_text_size" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/vehicle_owner_text"
         android:layout_below="@+id/manage_vehicle_model"
-        android:id="@+id/vehicle_owner"/>
+        android:id="@+id/vehicle_owner"
+        android:textSize="@dimen/manage_vehicle_text_size"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/manage_vehicle_model"
         android:layout_toRightOf="@+id/vehicle_owner"
-        android:id="@+id/vehicle_owner_textview"/>
+        android:id="@+id/vehicle_owner_textview"
+        android:textSize="@dimen/manage_vehicle_text_size"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/vehicle_owner"
         android:text="@string/vehicle_production_year_text"
-        android:id="@+id/vehicle_production_year"/>
+        android:id="@+id/vehicle_production_year"
+        android:textSize="@dimen/manage_vehicle_text_size"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/vehicle_owner"
         android:layout_toRightOf="@+id/vehicle_production_year"
-        android:id="@+id/vehicle_production_year_textview"/>
+        android:id="@+id/vehicle_production_year_textview"
+        android:textSize="@dimen/manage_vehicle_text_size"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/vehicle_production_year"
         android:text="@string/vehicle_previous_owners_text"
-        android:id="@+id/vehicle_previous_owners"/>
+        android:id="@+id/vehicle_previous_owners"
+        android:textSize="@dimen/manage_vehicle_text_size"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/vehicle_production_year"
         android:layout_toRightOf="@+id/vehicle_previous_owners"
-        android:id="@+id/vehicle_previous_owners_textview"/>
+        android:id="@+id/vehicle_previous_owners_textview"
+        android:textSize="@dimen/manage_vehicle_text_size"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/vehicle_previous_owners"
         android:text="@string/vehicle_kilometerage_text"
-        android:id="@+id/vehicle_kilometerage"/>
+        android:id="@+id/vehicle_kilometerage"
+        android:textSize="@dimen/manage_vehicle_text_size"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/vehicle_previous_owners"
         android:layout_toRightOf="@+id/vehicle_kilometerage"
-        android:id="@+id/vehicle_kilometerage_textview"/>
+        android:id="@+id/vehicle_kilometerage_textview"
+        android:textSize="@dimen/manage_vehicle_text_size"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/vehicle_kilometerage"
         android:text="@string/vehicle_last_oil_change_text"
-        android:id="@+id/vehicle_last_oil_change"/>
+        android:id="@+id/vehicle_last_oil_change"
+        android:textSize="@dimen/manage_vehicle_text_size"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/vehicle_kilometerage"
         android:layout_toRightOf="@+id/vehicle_last_oil_change"
-        android:id="@+id/vehicle_last_oil_change_textview"/>
+        android:id="@+id/vehicle_last_oil_change_textview"
+        android:textSize="@dimen/manage_vehicle_text_size"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/vehicle_last_oil_change"
         android:text="@string/vehicle_next_oil_change_text"
-        android:id="@+id/vehicle_next_oil_change"/>
+        android:id="@+id/vehicle_next_oil_change"
+        android:textSize="@dimen/manage_vehicle_text_size"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/vehicle_last_oil_change"
         android:layout_toRightOf="@+id/vehicle_next_oil_change"
-        android:id="@+id/vehicle_next_oil_change_textview"/>
+        android:id="@+id/vehicle_next_oil_change_textview"
+        android:textSize="@dimen/manage_vehicle_text_size"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/vehicle_next_oil_change"
+        android:id="@+id/vehicle_maintenance"
+        android:text="@string/manage_vehicle_maintenance"
+        android:textSize="@dimen/manage_vehicle_text_size"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/vehicle_next_oil_change"
+        android:layout_below="@id/vehicle_maintenance"
         android:id="@+id/manage_vehicle_update_button"
         android:text="@string/manage_vehicle_update_button_text"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/vehicle_next_oil_change"
+        android:layout_below="@+id/vehicle_maintenance"
         android:layout_toRightOf="@+id/manage_vehicle_update_button"
         android:text="@string/manage_vehicle_delete_button_text"
         android:id="@+id/manage_vehicle_delete_button"/>
