--- a/MyMV/app/src/main/res/layout/device_name.xml
+++ b/MyMV/app/src/main/res/layout/device_name.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- NOT THE SAME AS ORIGINAL -> https://android.googlesource.com/platform/development/+/25b6aed7b2e01ce7bdc0dfa1a79eaf009ad178fe/samples/BluetoothChat/res/layout/device_name.xml
+
+     Copyright (C) 2009 The Android Open Source Project
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
+          http://www.apache.org/licenses/LICENSE-2.0
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
+-->
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:textSize="18sp"
-    android:padding="5dp" />
+    android:textSize="@dimen/device_name_size"
+    android:padding="@dimen/device_name_padding" />
